--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="EditTextUnderline" parent="Widget.AppCompat.EditText">
+        <item name="colorControlActivated">#ff0000</item>
+    </style>
+
 </resources>
