--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,10 +12,11 @@
 
     <View
         android:id="@+id/blue_background"
-        android:layout_width="412dp"
+        android:layout_width="1000dp"
         android:layout_height="50dp"
         android:background="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,15 +46,17 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:dividerHeight="10.0sp"
         android:layout_height="498dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:dividerHeight="10.0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/blue_background" />
+        app:layout_constraintTop_toBottomOf="@+id/past"
+        app:layout_constraintVertical_bias="0.09" />
 
 </android.support.constraint.ConstraintLayout>
