--- a/app/src/main/res/layout/cabinet_card.xml
+++ b/app/src/main/res/layout/cabinet_card.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/med_card"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:orientation="horizontal"
-    android:background="@drawable/med_card_background">
+    android:layout_height="140dp"
+    android:background="@drawable/med_card_background"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/pill_image"
@@ -14,29 +14,25 @@
         android:layout_height="57dp"
         android:layout_gravity="center"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="16dp"
         android:background="@mipmap/pill_bottle"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cabinet_name" />
 
     <TextView
         android:id="@+id/cabinet_name"
-        android:layout_width="133dp"
-        android:layout_height="55dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
         android:padding="10dp"
-        android:textSize="20dp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cabinet_info"
-        app:layout_constraintStart_toEndOf="@+id/pill_image"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -44,14 +40,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:padding="10dp"
         android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/pill_image"
+        app:layout_constraintStart_toEndOf="@+id/pill_image"
+        app:layout_constraintTop_toTopOf="@+id/pill_image" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
