--- a/app/src/main/res/layout/medication_info.xml
+++ b/app/src/main/res/layout/medication_info.xml
@@ -65,7 +65,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.521"
+        app:layout_constraintVertical_bias="0.551"
         tools:text="@string/add_reminder" />
 
     <TextView
@@ -135,92 +135,134 @@
         android:id="@+id/checkBox_sun"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   S"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_mon" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_mon"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   M"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_tues" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.168"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_tues"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   T"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_wed" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_wed"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   W"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_thurs" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_thurs"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="  Th"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_fri" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.669"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_fri"
         android:layout_width="32dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   F"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_sat" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.829"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <CheckBox
         android:id="@+id/checkBox_sat"
-        android:layout_width="32dp"
+        android:layout_width="31dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginStart="364dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="204dp"
         android:button="@null"
         android:clickable='false'
         android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
         android:text="   S"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.989" />
 
     <EditText
         android:id="@+id/special_instructions"
@@ -357,7 +399,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.828"
+        app:layout_constraintHorizontal_bias="0.871"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.451" />
