--- a/app/src/main/res/layout/add_medication.xml
+++ b/app/src/main/res/layout/add_medication.xml
@@ -368,7 +368,7 @@
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         android:onClick="onAddMedication"
-        android:text="Add Changes"
+        android:text="Add Medication"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.882"
